@@ -32,6 +32,7 @@ Version 1.7.0current:
   Bug Fixes:
     * Fix xmlrpc request.read() call to use content-length header, if available.
     * Fix traceback in filesys.py on Mac OS X when import Carbon fails.
+    * Xapian search: fix searching for negative terms only
 
   Other changes:
     * HINT: If you want to use xapian based indexed search, you need to have
